--- a/2/assignment2.html
+++ b/2/assignment2.html
@@ -65,7 +65,16 @@ ol { margin: 1em; }
   <h1>Assignment 2: Exploratory Data Analysis</h1>
 
   <p>
-    <strong>Your Name</strong>
+    <strong>
+    <h3>GROUP Members: </h3>
+    <ol>
+      <li>Justin Heyman</li>
+      <li>Christopher Allen</li>
+      <li>Vanessa Lee</li>
+      <li>Andy Chung</li>
+      <li>Gaganpreet Singh</li>
+    </ol>  
+    </strong>
   </p>
 </section>
 
